@@ -1,12 +1,13 @@
 package com.yes255.yes255booksusersserver.application.service.impl;
 
 import com.yes255.yes255booksusersserver.application.service.CartBookService;
-import com.yes255.yes255booksusersserver.common.exception.*;
-        import com.yes255.yes255booksusersserver.common.exception.payload.ErrorStatus;
+import com.yes255.yes255booksusersserver.common.exception.BookNotFoundException;
+import com.yes255.yes255booksusersserver.common.exception.CartBookException;
+import com.yes255.yes255booksusersserver.common.exception.CartException;
+import com.yes255.yes255booksusersserver.common.exception.payload.ErrorStatus;
 import com.yes255.yes255booksusersserver.persistance.domain.Book;
 import com.yes255.yes255booksusersserver.persistance.domain.Cart;
 import com.yes255.yes255booksusersserver.persistance.domain.CartBook;
-import com.yes255.yes255booksusersserver.persistance.domain.User;
 import com.yes255.yes255booksusersserver.persistance.repository.JpaBookRepository;
 import com.yes255.yes255booksusersserver.persistance.repository.JpaCartBookRepository;
 import com.yes255.yes255booksusersserver.persistance.repository.JpaCartRepository;
@@ -17,17 +18,16 @@ import com.yes255.yes255booksusersserver.presentation.dto.request.cartbook.Updat
 import com.yes255.yes255booksusersserver.presentation.dto.response.cartbook.CartBookResponse;
 import com.yes255.yes255booksusersserver.presentation.dto.response.cartbook.CreateCartBookResponse;
 import com.yes255.yes255booksusersserver.presentation.dto.response.cartbook.UpdateCartBookResponse;
+import java.time.LocalDateTime;
+import java.util.List;
+import java.util.Objects;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDateTime;
-import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
-
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class CartBookServiceImpl implements CartBookService {
 
     private final JpaCartRepository cartRepository;
@@ -37,55 +37,58 @@ public class CartBookServiceImpl implements CartBookService {
 
     // 장바구니에 도서 추가
     @Override
-    public CreateCartBookResponse createCartBookByUserId(Long userId, CreateCartBookRequest request) {
-
+    public CreateCartBookResponse createCartBookByUserId(Long userId,
+        CreateCartBookRequest request) {
 
         Book book = bookRepository.findById(request.bookId())
-                .orElseThrow(() -> new BookNotFoundException(ErrorStatus.toErrorStatus("알맞은 책을 찾을 수 없습니다.", 400, LocalDateTime.now())));
-
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserException(ErrorStatus.toErrorStatus("유저가 존재하지 않습니다.", 400, LocalDateTime.now())));
+            .orElseThrow(() -> new BookNotFoundException(
+                ErrorStatus.toErrorStatus("알맞은 책을 찾을 수 없습니다.", 404, LocalDateTime.now())));
 
         Cart cart = cartRepository.findByCustomer_UserId(userId);
 
         if (Objects.isNull(cart)) {
-            throw new CartException(ErrorStatus.toErrorStatus("카트가 존재하지 않습니다.", 400, LocalDateTime.now()));
+            throw new CartException(
+                ErrorStatus.toErrorStatus("카트가 존재하지 않습니다.", 404, LocalDateTime.now()));
         }
 
-        // 장바구니에 도서 중복 확인
-        CartBook oldCartBook = cartBookRepository.findByCart_CartIdAndBook_BookId(cart.getCartId(), request.bookId());
-
-        if (Objects.nonNull(oldCartBook)) {
-            throw new CartBookException(ErrorStatus.toErrorStatus("장바구니에 같은 도서가 이미 존재합니다.", 400, LocalDateTime.now()));
+        if (cartBookRepository.existsByBookAndCart(book, cart)) {
+            throw new CartBookException(ErrorStatus.toErrorStatus(
+                "장바구니에 이미 같은 도서가 존재합니다.", 409, LocalDateTime.now()
+            ));
         }
 
-        CartBook cartBook = cartBookRepository.save(CartBook.builder()
+        CartBook cartBook = cartBookRepository.save(
+            CartBook.builder()
                 .book(book)
-                .bookQuantity(request.bookQuantity())
+                .bookQuantity(request.quantity())
                 .cart(cart)
                 .cartBookCreatedAt(LocalDateTime.now())
                 .build());
 
         return CreateCartBookResponse.builder()
-                .cartBookId(cartBook.getCartBookId())
-                .bookQuantity(request.bookQuantity())
-                .build();
+            .cartBookId(cartBook.getCartBookId())
+            .bookQuantity(request.quantity())
+            .build();
     }
 
     // 장바구니에 도서 수정 (수량 조절)
     @Override
-    public UpdateCartBookResponse updateCartBookByUserId(Long userId, UpdateCartBookRequest request) {
+    public UpdateCartBookResponse updateCartBookByUserId(Long userId,
+        UpdateCartBookRequest request) {
 
         Cart cart = cartRepository.findByCustomer_UserId(userId);
 
         if (Objects.isNull(cart)) {
-            throw new CartException(ErrorStatus.toErrorStatus("카트가 존재하지 않습니다.", 400, LocalDateTime.now()));
+            throw new CartException(
+                ErrorStatus.toErrorStatus("카트가 존재하지 않습니다.", 404, LocalDateTime.now()));
         }
 
-        CartBook cartBook = cartBookRepository.findByCartBookIdAndCart_CartId(request.cartBookId(), cart.getCartId());
+        CartBook cartBook = cartBookRepository.findByCartBookIdAndCart_CartId(request.cartBookId(),
+            cart.getCartId());
 
         if (Objects.isNull(cartBook)) {
-            throw new CartBookException(ErrorStatus.toErrorStatus("장바구니 도서가 존재하지 않습니다.", 400, LocalDateTime.now()));
+            throw new CartBookException(
+                ErrorStatus.toErrorStatus("장바구니 도서가 존재하지 않습니다.", 404, LocalDateTime.now()));
         }
 
         cartBook.updateCartBookQuantity(request.bookQuantity());
@@ -93,9 +96,9 @@ public class CartBookServiceImpl implements CartBookService {
         cartBookRepository.save(cartBook);
 
         return UpdateCartBookResponse.builder()
-                .cartBookId(cartBook.getCartBookId())
-                .bookQuantity(request.bookQuantity())
-                .build();
+            .cartBookId(cartBook.getCartBookId())
+            .bookQuantity(request.bookQuantity())
+            .build();
     }
 
     // 장바구니에서 도서 삭제
@@ -111,16 +114,18 @@ public class CartBookServiceImpl implements CartBookService {
         Cart cart = cartRepository.findByCustomer_UserId(userId);
 
         if (Objects.isNull(cart)) {
-            throw new CartException(ErrorStatus.toErrorStatus("카트가 존재하지 않습니다.", 400, LocalDateTime.now()));
+            throw new CartException(
+                ErrorStatus.toErrorStatus("카트가 존재하지 않습니다.", 404, LocalDateTime.now()));
         }
-
-        List<CartBook> cartBooks = cartBookRepository.findByCart_CartIdOrderByCartBookCreatedAtDesc(cart.getCartId());
-
+        List<CartBook> cartBooks = cartBookRepository.findByCart_CartIdOrderByCartBookCreatedAtDesc(
+            cart.getCartId());
 
         return cartBooks.stream()
-                .map(cartBook -> new CartBookResponse(userId, cartBook.getCartBookId(), cartBook.getBook().getBookId(),
-                        cartBook.getBook().getBookName(), cartBook.getBook().getBookPrice(), cartBook.getBookQuantity(), cartBook.getBook().isBookIsPackable()))
-                .collect(Collectors.toList());
+            .map(cartBook -> new CartBookResponse(userId, cartBook.getCartBookId(),
+                cartBook.getBook().getBookId(),
+                cartBook.getBook().getBookName(), cartBook.getBook().getBookPrice(),
+                cartBook.getBookQuantity(), cartBook.getBook().isBookIsPackable()))
+            .toList();
     }
 
     @Transactional
@@ -130,22 +135,28 @@ public class CartBookServiceImpl implements CartBookService {
         Cart cart = cartRepository.findByCustomer_UserId(userId);
 
         if (Objects.isNull(cart)) {
-            throw new CartException(ErrorStatus.toErrorStatus("장바구니가 존재하지 않습니다.", 400, LocalDateTime.now()));
+            throw new CartException(
+                ErrorStatus.toErrorStatus("장바구니가 존재하지 않습니다.", 404, LocalDateTime.now()));
         }
 
         for (UpdateCartBookOrderRequest cartBookOrderRequest : request) {
-            CartBook cartBook = cartBookRepository.findByCart_CartIdAndBook_BookId(cart.getCartId(), cartBookOrderRequest.bookId());
+            CartBook cartBook = cartBookRepository.findByCart_CartIdAndBook_BookId(cart.getCartId(),
+                    cartBookOrderRequest.bookId())
+                .orElseThrow(() -> new CartBookException(
+                    ErrorStatus.toErrorStatus("장바구니 도서가 존재하지 않습니다.", 404, LocalDateTime.now())
+                ));
 
             if (Objects.isNull(cartBook)) {
-                throw new CartBookException(ErrorStatus.toErrorStatus("장바구니에 도서가 존재하지 않습니다.", 400, LocalDateTime.now()));
+                throw new CartBookException(
+                    ErrorStatus.toErrorStatus("장바구니에 도서가 존재하지 않습니다.", 404, LocalDateTime.now()));
 
             }
 
             if (cartBook.getBookQuantity() - cartBookOrderRequest.quantity() < 1) {
                 cartBookRepository.delete(cartBook);
-            }
-            else {
-                cartBook.updateCartBookQuantity(cartBook.getBookQuantity() - cartBookOrderRequest.quantity());
+            } else {
+                cartBook.updateCartBookQuantity(
+                    cartBook.getBookQuantity() - cartBookOrderRequest.quantity());
                 cartBookRepository.save(cartBook);
             }
         }
